--- a/app/src/main/res/layout/activity_view_list.xml
+++ b/app/src/main/res/layout/activity_view_list.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    tools:context=".ViewListActivity">
     <Button
-        android:onClick="clickView"
-        android:text="公共视图文件"
+        android:text="textView相关"
+        android:onClick="textViewBut"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
 </LinearLayout>
